# ZPE-Mental

./: .gitignore  .zenodo.json  AUDITOR_PLAYBOOK.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  PUBLIC_AUDIT_LIMITS.md  README.md  REPRODUCIBILITY.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  evidence_dispute.md  feature_request.md  question.md
.github/workflows/: ci.yml  publish.yml
artifacts/: l7_mental_split_matrix.json
docs/: ARCHITECTURE.md  BOUNDED_RELEASE_SCOPE.md  CURRENT_PUBLIC_STATUS.md  FAQ.md  L7_MENTAL_BOUNDED_RELEASE_SCOPE.md  LEGAL_BOUNDARIES.md  README.md  SUPPORT.md
docs/_reorientation/2026-04-17/: NOVELTY_CARD.md
product-page/: README.md  index.html  product-page-audit.json
proofs/artifacts/: mental_release_matrix.local.json
proofs/manifests/: CURRENT_FALSIFICATION_PACKET.md
scripts/: rerun_mental_matrix.py  validate_release.py
src/: lib.rs
tests/: __init__.py  common.py  test_mental_native_optional.py  test_mental_reference.py
validation/corpora/: endogenous_forms.json  non_visual_prompts.json
validation/results/: pytest.local.xml  pytest.xml
zpe_mental/: __init__.py  codec.py  form_constants.py  ingest.py  pack.py  symmetry.py  types.py
