[package]
name = "zpe_mental_codec"
version = "0.1.0"
edition = "2021"
publish = false
license = "LicenseRef-Zer0pa-SAL-6.2"
description = "Geogram 3 Rust authoritative endogenous-form codec for mental"

[lib]
name = "zpe_mental_codec"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py311"] }

[package.metadata.maturin]
name = "zpe_mental_codec"
