[package]
name = "zpe_mental_native"
version = "0.1.0"
edition = "2021"
publish = false
description = "Rust extension for bounded endogenous visual form encoding"

[lib]
name = "zpe_mental_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py311"] }
