[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "zpe-mental"
version = "0.1.0"
license = "LicenseRef-Zer0pa-SAL-7.0"
description = "Bounded endogenous visual form encoding with a Rust-native fast path"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Zer0paGlyph"}]
dependencies = []
classifiers = [
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Rust",
]

[project.optional-dependencies]
test = ["pytest>=8,<9"]

[project.urls]
Homepage = "https://github.com/Zer0pa/ZPE-Mental"
Repository = "https://github.com/Zer0pa/ZPE-Mental"
Issues = "https://github.com/Zer0pa/ZPE-Mental/issues"

[tool.maturin]
manifest-path = "Cargo.toml"
module-name = "zpe_mental._native"
python-source = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
