[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "zpe-mental"
version = "0.1.0"
description = "Bounded endogenous visual form encoding with a Rust-native fast path"
readme = "README.md"
requires-python = ">=3.11"
license = "LicenseRef-Zer0pa-SAL-7.1"
authors = [{name = "Zer0pa (Pty) Ltd", email = "architects@zer0pa.ai"}]
dependencies = []
keywords = [
  "mental encoding",
  "visual forms",
  "endogenous imagery",
  "rust extension",
  "reproducible research",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
test = ["pytest>=8,<9"]

[project.urls]
Homepage = "https://github.com/Zer0pa/ZPE-Mental"
Documentation = "https://github.com/Zer0pa/ZPE-Mental/blob/main/docs/README.md"
Repository = "https://github.com/Zer0pa/ZPE-Mental"
Issues = "https://github.com/Zer0pa/ZPE-Mental/issues"
Changelog = "https://github.com/Zer0pa/ZPE-Mental/blob/main/CHANGELOG.md"

[tool.maturin]
manifest-path = "Cargo.toml"
module-name = "zpe_mental._native"
python-source = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
